--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^7.4",
         "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
